# fastapi-starter

./: .env  Dockerfile  database.db  main.py  makefile  prestart.sh  push.sh  pyproject.toml
app/: Dockerfile  main.py  requirments.txt
app/src/crud/: crud_book.py
app/src/database/: session.py
app/src/exception/handler/: http_error.py
app/src/router/: __init__.py  response.py  schema.py  security.py
app/src/router/book/: api.py  object.py
app/src/schema/: __init__.py  books_schema.py
app/src/utils/: json_util.py  response_builder.py
migrations/: env.py
migrations/versions/: c80bd9ee3dd9_update.py
src/core/: config.py
src/crud/: base.py  crud_book.py
src/database/: engine.py  session.py
src/database/models/: __init__.py  author.py  books.py
src/router/: api.py  security.py
src/router/book/: api.py  object.py
src/schema/: books_schema.py
