[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = "Fastapi Starter Template"
authors = ["Naufal Afif <naufalafif58@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.4.3"
fastapi = "^0.61.1"
uvicorn = "^0.12.0"
fastapi-utils = "^0.2.1"
sqlalchemy = "^1.3.19"
coverage = "^5.3"
pydantic-sqlalchemy = "^0.0.7"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
xdoctest = "^0.15.0"
pygments = "^2.7.1"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
